scripts/nullaway/nullgtn/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8.txt
../nullgtn/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/core/AbstractPiece.java:118: error: [NullAway] parameter dir is @NonNull, but parameter in superclass method karlney.tetris.core.Piece.moveSideWays(karlney.tetris.core.PlayerInput) is @Nullable
    public synchronized void moveSideWays(PlayerInput dir) {
                                                      ^
    (see http://t.uber.com/nullaway )
../nullgtn/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/core/AbstractPiece.java:156: error: [NullAway] parameter i is @NonNull, but parameter in superclass method karlney.tetris.core.Piece.getSquare(int,int) is @Nullable
    public synchronized Square getSquare(int i, int j) {
                                             ^
    (see http://t.uber.com/nullaway )
../nullgtn/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/core/AbstractPiece.java:166: error: [NullAway] parameter i is @NonNull, but parameter in superclass method karlney.tetris.core.Piece.isFilled(int,int) is @Nullable
    public synchronized boolean isFilled(int i, int j) {
                                             ^
    (see http://t.uber.com/nullaway )
../nullgtn/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/core/Player.java:123: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
            throw new UnableToPlacePieceException("The next piece " + currentPiece + " could not be placed on the board. This means GAME OVER.", null);
                                                                                                                                                 ^
    (see http://t.uber.com/nullaway )
../nullgtn/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/Highscore.java:83: error: [NullAway] passing @Nullable parameter 'name' where @NonNull is required
            w.writeObject(new HighScorePost(score, name));
                                                   ^
    (see http://t.uber.com/nullaway )
../nullgtn/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/TetrisGameSwing.java:59: error: [NullAway] initializer method does not guarantee @NonNull fields exitCmd (line 36), newGameCmd (line 36), pauseCmd (line 36), changeLevelCmd (line 36), showHighscoreCmd (line 36), nextLvlCmd (line 36), prevLvlCmd (line 36) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public TetrisGameSwing() {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/TetrisGameSwing.java:118: error: [NullAway] dereferenced expression game is @Nullable
        if (!game.isPaused())
                 ^
    (see http://t.uber.com/nullaway )
../nullgtn/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/TetrisGameSwing.java:139: error: [NullAway] dereferenced expression game is @Nullable
            game.getPlayers().get(0).processInput(PlayerInput.ROTATE);
                ^
    (see http://t.uber.com/nullaway )
../nullgtn/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/TetrisGameSwing.java:141: error: [NullAway] dereferenced expression game is @Nullable
            game.getPlayers().get(0).processInput(PlayerInput.DOWN);
                ^
    (see http://t.uber.com/nullaway )
../nullgtn/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/TetrisGameSwing.java:143: error: [NullAway] dereferenced expression game is @Nullable
            game.getPlayers().get(0).processInput(PlayerInput.LEFT);
                ^
    (see http://t.uber.com/nullaway )
../nullgtn/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/TetrisGameSwing.java:145: error: [NullAway] dereferenced expression game is @Nullable
            game.getPlayers().get(0).processInput(PlayerInput.RIGHT);
                ^
    (see http://t.uber.com/nullaway )
../nullgtn/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/TetrisGameSwing.java:147: error: [NullAway] dereferenced expression game is @Nullable
            game.getPlayers().get(0).processInput(PlayerInput.DROP);
                ^
    (see http://t.uber.com/nullaway )
../nullgtn/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/TetrisGameSwing.java:161: error: [NullAway] dereferenced expression game is @Nullable
            game.togglePause();
                ^
    (see http://t.uber.com/nullaway )
../nullgtn/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/TetrisGameSwing.java:167: error: [NullAway] dereferenced expression game is @Nullable
            game.increaseLevel();
                ^
    (see http://t.uber.com/nullaway )
../nullgtn/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/TetrisGameSwing.java:170: error: [NullAway] dereferenced expression game is @Nullable
            game.decreaseLevel();
                ^
    (see http://t.uber.com/nullaway )
../nullgtn/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/TetrisGameSwing.java:186: error: [NullAway] dereferenced expression game is @Nullable
            for (Player player : game.getPlayers()) {
                                     ^
    (see http://t.uber.com/nullaway )
../nullgtn/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/TetrisGameSwing.java:196: error: [NullAway] passing @Nullable parameter '((AIPlayer) player).getDestination()' where @NonNull is required
                    drawDestination(g, ((AIPlayer) player).getDestination());
                                                                         ^
    (see http://t.uber.com/nullaway )
../nullgtn/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/ai/AIPlayer.java:70: error: [NullAway] assigning @Nullable expression to @NonNull field
            currentPiece = destinationPiece;
                         ^
    (see http://t.uber.com/nullaway )
../nullgtn/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/ai/OnePieceNoPathCheckPiecePlacer.java:24: error: [NullAway] parameter evaluator is @NonNull, but parameter in superclass method karlney.tetris.ai.PiecePlacer.bestPlacement(karlney.tetris.ai.BoardEvaluator,karlney.tetris.core.Board,karlney.tetris.core.Piece,karlney.tetris.core.Piece) is @Nullable
    public Piece bestPlacement(BoardEvaluator evaluator, Board board, Piece currentPiece, Piece nextPiece) {
                                              ^
    (see http://t.uber.com/nullaway )
../nullgtn/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/ai/ElAshiEvaluatorTest.java:44: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        Piece out = new OnePieceNoPathCheckPiecePlacer().bestPlacement(new ElAshiTetrisBoardEvaluator(), boardBefore, piece, null);
                                                                                                                             ^
    (see http://t.uber.com/nullaway )
20 errors
